--- a/ch02/ch02_3/package.json
+++ b/ch02/ch02_3/package.json
@@ -9,8 +9,6 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
-    "@types/react": "^19.2.7",
-    "@types/react-dom": "^19.2.3",
     "chance": "^1.1.13",
     "luxon": "^3.7.2",
     "react": "^19.2.1",
@@ -45,6 +43,8 @@
   },
   "devDependencies": {
     "@types/chance": "^1.1.7",
-    "@types/luxon": "^3.7.1"
+    "@types/luxon": "^3.7.1",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3"
   }
 }
