--- a/ch05/ch05_3/package.json
+++ b/ch05/ch05_3/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^9.2.0",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -51,6 +52,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/chance": "^1.1.7",
     "@types/luxon": "^3.7.1",
+    "@types/redux-logger": "^3.0.13",
     "autoprefixer": "^10.4.23",
     "daisyui": "^4.12.24",
     "postcss": "^8.5.6",
