--- a/ch05/ch05_3/package.json
+++ b/ch05/ch05_3/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^3.1.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -53,6 +54,7 @@
     "@types/chance": "^1.1.7",
     "@types/luxon": "^3.7.1",
     "@types/redux-logger": "^3.0.13",
+    "@types/redux-thunk": "^2.1.32",
     "autoprefixer": "^10.4.23",
     "daisyui": "^4.12.24",
     "postcss": "^8.5.6",
